[project]
name = "qq-jm-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "img2pdf>=0.6.1",
    "jmcomic>=2.6.4",
    "pydantic>=2.12.2",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.17",
]
